fix alignment; couldnt fix imgs so just resized to 300x300

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  color: black;
-  background-color: white;
-}
-
-
  body {
   margin: 0;
+  padding: 2rem;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+.App {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  grid-column-gap: 0.5rem; 
+  grid-row-gap: 0.5rem; 
+  text-align: center; 
+}
+
+h1 {
+  grid-column: span 4;
+  margin-bottom: 2rem; 
 }
